--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  pedantic_mono: ^1.14.0+1
+  quiver: ^3.0.1+1
 
 dev_dependencies:
   flutter_test:
