n秒ごとのHTTP通信の実装（stream）

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   pedantic_mono: ^1.14.0+1
   quiver: ^3.0.1+1
+  provider: ^6.0.1
+  http: ^0.13.4
+  convert: ^3.0.1
 
 dev_dependencies:
   flutter_test:
