--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   uses-material-design: true
   assets:
     - images/
+    - images/gif/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
